# minimal-poetry-src-layout

./: pyproject.toml
src/minimal_poetry_src_layout/: a.py  b.py  c.py
